reports/Clase10.log
Traceback (most recent call last):
  File "/home/felix/miniconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/felix/miniconda3/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/felix/miniconda3/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/felix/miniconda3/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/home/felix/miniconda3/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/felix/miniconda3/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/home/felix/miniconda3/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/felix/miniconda3/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
musica_dic = {'blues':'Nina Simone', 'rock':'Led Zeppelin', 'rap':'Makiza' 'trap':'Pablo Chill-e', 'pop':'Dua Lipa'  }
def recomendacion(estilo): 
    #Entrada como texto: ejm "rock"
    if type(estlo) == str: 
        for k, v in musica_dic.items(): 
            if estilo == k:
                recomend = v
                break
            else: 
                recomend = "No tenemos recomendación" 
                
    #Entrada como lista ej ["rock"] o ["rock", "blues"]
    else:
        #1 estilo musical
        if len(estilo) = 1:
            for k, v in musica_dic.items(): 
                if estilo[0] == k:
                    recomend = v
                    break
                else: 
                    recomend = "No tenemos recomendación"     

        #2 estilos musicales
        elif len(estilo) == 2:
            recomend = []
            for k, v in musica_dic.item(): 
                if estilo[0] == k:
                    recomend.append(v)
                if estilo[1] == k:
                    recomend.append(v)
        #3 estilos musicales: 
        elif len(estilo) == 3:
            recomend = []
            for k, v in musica_dic.items(): 
                if estilo[0] == k:
                    recomend.append(v)
                elif estilo[1] == k:
                    recomend.append(v)    
                elif estilo[2] == k:
                    recomend.append(v)          
        
    return recomend
------------------

[0;36m  File [0;32m"<ipython-input-1-437f360f7197>"[0;36m, line [0;32m1[0m
[0;31m    musica_dic = {'blues':'Nina Simone', 'rock':'Led Zeppelin', 'rap':'Makiza' 'trap':'Pablo Chill-e', 'pop':'Dua Lipa'  }[0m
[0m                                                                                     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-437f360f7197>, line 1)

